uploading modified version of css, html and js

--- a/index.html
+++ b/index.html
@@ -240,7 +240,134 @@
 
   <hr />
   <!-- PORTFOLIO: -->
-  <div class="row g-2">
+  <div class="container">
+    <div class="row1">
+      <a href="#">
+        <div class="item col4">
+          <img class="transition img-responsive">
+          <img src="./assets/img:portfolio:Kast.JPG" alt="Image" />
+          <h4 class="project-title">Kastapp.co Recreation</h4>
+          <p class="summary">This is a recreation of the first half of the kastapp.co website. This
+            is a static layout.</p>
+        </div>
+      </a>
+      <a href="#">
+        <div class="item col4">
+          <img class="transition img-responsive">
+          <img src="./assets/Britney Spears 1.jpeg" alt="Image" />
+          <h4 class="project-title">Kastapp.co Recreation</h4>
+          <p class="summary">This is a recreation of the first half of the kastapp.co website. This
+            is a static layout.</p>
+        </div>
+      </a>
+      <a href="#">
+        <div class="item col4">
+          <img class="transition img-responsive">
+          <img src="./assets/img:portfolio:Kast.JPG" alt="Image" />
+          <h4 class="project-title">Kastapp.co Recreation</h4>
+          <p class="summary">This is a recreation of the first half of the kastapp.co website. This
+            is a static layout.</p>
+        </div>
+      </a>
+      <div class="row2">
+        <a href="#">
+          <div class="item col4">
+            <img class="transition img-responsive">
+            <img src="./assets/img:portfolio:Kast.JPG" alt="Image" />
+            <h4 class="project-title">Kastapp.co Recreation</h4>
+            <p class="summary">This is a recreation of the first half of the kastapp.co website. This
+              is a static layout.</p>
+          </div>
+        </a>
+        <a href="#">
+          <div class="item col4">
+            <img class="transition img-responsive">
+            <img src="./assets/img:portfolio:Kast.JPG" alt="Image" />
+            <h4 class="project-title">Kastapp.co Recreation</h4>
+            <p class="summary">This is a recreation of the first half of the kastapp.co website.
+              This
+              is a static layout.</p>
+          </div>
+        </a>
+        <a href="#">
+          <div class="item col4">
+            <img class="transition img-responsive">
+            <img src="./assets/img:portfolio:Kast.JPG" alt="Image" />
+            <h4 class="project-title">Kastapp.co Recreation</h4>
+            <p class="summary">This is a recreation of the first half of the kastapp.co website.
+              This
+              is a static layout.</p>
+          </div>
+        </a>
+      </div>
+      <div class="row3">
+        <a href="#">
+          <div class="item col4">
+            <img class="transition img-responsive">
+            <img src="./assets/img:portfolio:Kast.JPG" alt="Image" />
+            <h4 class="project-title">Kastapp.co Recreation</h4>
+            <p class="summary">This is a recreation of the first half of the kastapp.co website. This
+              is a static layout.</p>
+          </div>
+        </a>
+        <a href="#">
+          <div class="item col4">
+            <img class="transition img-responsive">
+            <img src="./assets/img:portfolio:Kast.JPG" alt="Image" />
+            <h4 class="project-title">Kastapp.co Recreation</h4>
+            <p class="summary">This is a recreation of the first half of the kastapp.co website.
+              This
+              is a static layout.</p>
+          </div>
+        </a>
+        <a href="#">
+          <div class="item col4">
+            <img class="transition img-responsive">
+            <img src="./assets/img:portfolio:Kast.JPG" alt="Image" />
+            <h4 class="project-title">Kastapp.co Recreation</h4>
+            <p class="summary">This is a recreation of the first half of the kastapp.co website.
+              This
+              is a static layout.</p>
+          </div>
+        </a>
+      </div>
+      <div class="row3">
+        <a href="#">
+          <div class="item col4">
+            <img class="transition img-responsive">
+            <img src="./assets/img:portfolio:Kast.JPG" alt="Image" />
+            <h4 class="project-title">Kastapp.co Recreation</h4>
+            <p class="summary">This is a recreation of the first half of the kastapp.co website. This
+              is a static layout.</p>
+          </div>
+        </a>
+        <a href="#">
+          <div class="item col4">
+            <img class="transition img-responsive">
+            <img src="./assets/img:portfolio:Kast.JPG" alt="Image" />
+            <h4 class="project-title">Kastapp.co Recreation</h4>
+            <p class="summary">This is a recreation of the first half of the kastapp.co website.
+              This
+              is a static layout.</p>
+          </div>
+        </a>
+        <a href="#">
+          <div class="item col4">
+            <img class="transition img-responsive">
+            <img src="./assets/img:portfolio:Kast.JPG" alt="Image" />
+            <h4 class="project-title">Kastapp.co Recreation</h4>
+            <p class="summary">This is a recreation of the first half of the kastapp.co website.
+              This
+              is a static layout.</p>
+          </div>
+        </a>
+      </div>
+    </div>
+  </div>
+
+
+
+  <!-- <div class="row g-2">
     <div class="col-md-3">
       <div class="col-md-3">
         <div class="col-md-3">
@@ -259,7 +386,7 @@
     </div>
   </div>
   </div>
-  </section>
+  </section> -->
 
   <!-- Insert link to project and stylize thumbnail -->
 
