--- a/index.html
+++ b/index.html
@@ -57,57 +57,62 @@
       </div>
     </div>
   </div>
+
+  <!-- <div id="stars">0</div>
+  <div id="stars2"></div>
+  <div id="stars3"></div> -->
+
   <!-- HERO LANDING PAGE -->
-  <div id="container" style="background-color: black;">
+  <div id="container">
     <img id="background-image" src="./assets/FinalBackgroundImageLarge.jpeg" class='img-fluid'>
     <img id="logo" src="./assets/LogoWhite.png">
   </div>
 
-  <div class="container">
-    <!-- ABOUT ME -->
-    <section id="about-me">
-      <div class="container">
-        <h1 class="about-me-title">About Me</h1>
-        <div class="row">
-          <div class="col-md-4">
-            <p class="para"></p>
-            Boggarts lavender robes, Hermione Granger Fantastic Beasts and
-            Where to Find Them. Bee in your bonnet Hand of Glory elder wand,
-            spectacles House Cup Bertie Bott’s Every Flavor Beans
-            Impedimenta. Stunning spells tap-dancing spider Slytherin’s Heir
-            mewing kittens Remus Lupin. Palominos scarlet train black robes,
-            Metamorphimagus Niffler dead easy second bedroom. Padma and
-            Parvati Sorting Hat Minister of Magic blue turban remember my
-            last.
-          </div>
-          <div class="col-md-4">
-            <p class="para"></p>
-            Half-giant jinxes peg-leg gillywater broken glasses large black
-            dog Great Hall. Nearly-Headless Nick now string them together,
-            and answer me this, which creature would you be unwilling to
-            kiss? Poltergeist sticking charm, troll umbrella stand flying
-            cars golden locket Lily Potter. Pumpkin juice Trevor wave your
-            wand out glass orbs, a Grim knitted hats. Stan Shunpike doe
-            patronus, suck his soul Muggle-Born large order of drills the
-            trace. Bred in captivity fell through the veil, quaffle blue
-            flame ickle diddykins Aragog. Yer a wizard, Harry Doxycide the
-            woes of Mrs. Weasley Goblet of Fire.
-          </div>
-          <div class="col-md-4">
-            <p class="para"></p>
-            Shameless self-promo with github and LinkedIn links and link to
-            portolio later on down page
-          </div>
+  <!-- <div class="container"> -->
+  <!-- ABOUT ME -->
+  <section id="about-me">
+    <div class="container">
+      <h1 class="about-me-title">About Me</h1>
+      <div class="row">
+        <div class="col-md-4">
+          <p class="para"></p>
+          Boggarts lavender robes, Hermione Granger Fantastic Beasts and
+          Where to Find Them. Bee in your bonnet Hand of Glory elder wand,
+          spectacles House Cup Bertie Bott’s Every Flavor Beans
+          Impedimenta. Stunning spells tap-dancing spider Slytherin’s Heir
+          mewing kittens Remus Lupin. Palominos scarlet train black robes,
+          Metamorphimagus Niffler dead easy second bedroom. Padma and
+          Parvati Sorting Hat Minister of Magic blue turban remember my
+          last.
+        </div>
+        <div class="col-md-4">
+          <p class="para"></p>
+          Half-giant jinxes peg-leg gillywater broken glasses large black
+          dog Great Hall. Nearly-Headless Nick now string them together,
+          and answer me this, which creature would you be unwilling to
+          kiss? Poltergeist sticking charm, troll umbrella stand flying
+          cars golden locket Lily Potter. Pumpkin juice Trevor wave your
+          wand out glass orbs, a Grim knitted hats. Stan Shunpike doe
+          patronus, suck his soul Muggle-Born large order of drills the
+          trace. Bred in captivity fell through the veil, quaffle blue
+          flame ickle diddykins Aragog. Yer a wizard, Harry Doxycide the
+          woes of Mrs. Weasley Goblet of Fire.
+        </div>
+        <div class="col-md-4">
+          <p class="para"></p>
+          Shameless self-promo with github and LinkedIn links and link to
+          portolio later on down page
         </div>
       </div>
-  </div>
+    </div>
+    </div>
   </section>
 
   <hr />
 
   <!-- MY CREDO -->
   <div class="container">
-    <h1 class="my-credo-title">My Credo</h1>
+    <h1 class="my-credo-title">Credo</h1>
     <div class="row g-2">
       <div class="col-md-3">
         <div class="credo-divs">
@@ -182,7 +187,7 @@
 
   <!-- SKILLS -->
   <section class="container">
-    <h1 class="h1-my-skillset">Skills:</h1>
+    <h1 class="h1-my-skillset">Skills</h1>
     <div class="row g-2">
       <div class="col-md-3">
         <div class="html5css" id="skills-div" onclick="skillHTML()">
@@ -241,142 +246,72 @@
   <hr />
   <!-- PORTFOLIO: -->
   <div class="container">
-    <div class="row1">
-      <a href="#">
-        <div class="item col4">
-          <img class="transition img-responsive">
+    <h1 class="portfolio">Portfolio</h1>
+    <div class="row1 g-2">
+      <a href="https://courtneydowns.github.io/kastapp/" target="_blank">
+        <div class="item col-sm-4" style="background: #c5247e;">
+          <img class=" transition img-responsive">
           <img src="./assets/img:portfolio:Kast.JPG" alt="Image" />
           <h4 class="project-title">Kastapp.co Recreation</h4>
           <p class="summary">This is a recreation of the first half of the kastapp.co website. This
             is a static layout.</p>
         </div>
       </a>
-      <a href="#">
-        <div class="item col4">
-          <img class="transition img-responsive">
-          <img src="./assets/Britney Spears 1.jpeg" alt="Image" />
-          <h4 class="project-title">Kastapp.co Recreation</h4>
-          <p class="summary">This is a recreation of the first half of the kastapp.co website. This
-            is a static layout.</p>
-        </div>
-      </a>
-      <a href="#">
-        <div class="item col4">
-          <img class="transition img-responsive">
+      <a href="https://courtneydowns.github.io/kastapp/" target="_blank">
+        <div class="item col-sm-4" style="background: #c5247e;">
+          <img class=" transition img-responsive">
           <img src="./assets/img:portfolio:Kast.JPG" alt="Image" />
           <h4 class="project-title">Kastapp.co Recreation</h4>
           <p class="summary">This is a recreation of the first half of the kastapp.co website. This
             is a static layout.</p>
         </div>
       </a>
-      <div class="row2">
-        <a href="#">
-          <div class="item col4">
-            <img class="transition img-responsive">
-            <img src="./assets/img:portfolio:Kast.JPG" alt="Image" />
-            <h4 class="project-title">Kastapp.co Recreation</h4>
-            <p class="summary">This is a recreation of the first half of the kastapp.co website. This
-              is a static layout.</p>
-          </div>
-        </a>
-        <a href="#">
-          <div class="item col4">
-            <img class="transition img-responsive">
-            <img src="./assets/img:portfolio:Kast.JPG" alt="Image" />
-            <h4 class="project-title">Kastapp.co Recreation</h4>
-            <p class="summary">This is a recreation of the first half of the kastapp.co website.
-              This
-              is a static layout.</p>
-          </div>
-        </a>
-        <a href="#">
-          <div class="item col4">
-            <img class="transition img-responsive">
-            <img src="./assets/img:portfolio:Kast.JPG" alt="Image" />
-            <h4 class="project-title">Kastapp.co Recreation</h4>
-            <p class="summary">This is a recreation of the first half of the kastapp.co website.
-              This
-              is a static layout.</p>
-          </div>
-        </a>
-      </div>
-      <div class="row3">
-        <a href="#">
-          <div class="item col4">
-            <img class="transition img-responsive">
-            <img src="./assets/img:portfolio:Kast.JPG" alt="Image" />
-            <h4 class="project-title">Kastapp.co Recreation</h4>
-            <p class="summary">This is a recreation of the first half of the kastapp.co website. This
-              is a static layout.</p>
-          </div>
-        </a>
-        <a href="#">
-          <div class="item col4">
-            <img class="transition img-responsive">
-            <img src="./assets/img:portfolio:Kast.JPG" alt="Image" />
-            <h4 class="project-title">Kastapp.co Recreation</h4>
-            <p class="summary">This is a recreation of the first half of the kastapp.co website.
-              This
-              is a static layout.</p>
-          </div>
-        </a>
-        <a href="#">
-          <div class="item col4">
-            <img class="transition img-responsive">
-            <img src="./assets/img:portfolio:Kast.JPG" alt="Image" />
-            <h4 class="project-title">Kastapp.co Recreation</h4>
-            <p class="summary">This is a recreation of the first half of the kastapp.co website.
-              This
-              is a static layout.</p>
-          </div>
-        </a>
-      </div>
-      <div class="row3">
-        <a href="#">
-          <div class="item col4">
-            <img class="transition img-responsive">
-            <img src="./assets/img:portfolio:Kast.JPG" alt="Image" />
-            <h4 class="project-title">Kastapp.co Recreation</h4>
-            <p class="summary">This is a recreation of the first half of the kastapp.co website. This
-              is a static layout.</p>
-          </div>
-        </a>
-        <a href="#">
-          <div class="item col4">
-            <img class="transition img-responsive">
-            <img src="./assets/img:portfolio:Kast.JPG" alt="Image" />
-            <h4 class="project-title">Kastapp.co Recreation</h4>
-            <p class="summary">This is a recreation of the first half of the kastapp.co website.
-              This
-              is a static layout.</p>
-          </div>
-        </a>
-        <a href="#">
-          <div class="item col4">
-            <img class="transition img-responsive">
-            <img src="./assets/img:portfolio:Kast.JPG" alt="Image" />
-            <h4 class="project-title">Kastapp.co Recreation</h4>
-            <p class="summary">This is a recreation of the first half of the kastapp.co website.
-              This
-              is a static layout.</p>
-          </div>
-        </a>
-      </div>
-    </div>
-  </div>
-
-
-
-  <!-- <div class="row g-2">
-    <div class="col-md-3">
-      <div class="col-md-3">
-        <div class="col-md-3">
+      <a href="https://courtneydowns.github.io/kastapp/" target="_blank">
+        <div class="item col-sm-4" style="background: #c5247e;">
+          <img class=" transition img-responsive">
+          <img src="./assets/img:portfolio:Kast.JPG" alt="Image" />
+          <h4 class="project-title">Kastapp.co Recreation</h4>
+          <p class="summary">This is a recreation of the first half of the kastapp.co website. This
+            is a static layout.</p>
         </div>
-      </div>
+      </a>
     </div>
-
-
+    <div class="row2 g-2">
+      <a href="https://courtneydowns.github.io/kastapp/" target="_blank">
+        <div class="item col-sm-4" style="background: #c5247e;">
+          <img class=" transition img-responsive">
+          <img src="./assets/img:portfolio:Kast.JPG" alt="Image" />
+          <h4 class="project-title">Kastapp.co Recreation</h4>
+          <p class="summary">This is a recreation of the first half of the kastapp.co website. This
+            is a static layout.</p>
+        </div>
+      </a>
+      <a href="https://courtneydowns.github.io/kastapp/" target="_blank">
+        <div class="item col-sm-4" style="background: #c5247e;">
+          <img class=" transition img-responsive">
+          <img src="./assets/img:portfolio:Kast.JPG" alt="Image" />
+          <h4 class="project-title">Kastapp.co Recreation</h4>
+          <p class="summary">This is a recreation of the first half of the kastapp.co website. This
+            is a static layout.</p>
+        </div>
+      </a>
+      <a href="https://courtneydowns.github.io/kastapp/" target="_blank">
+        <div class="item col-sm-4" style="background: #c5247e;">
+          <img class=" transition img-responsive">
+          <img src="./assets/img:portfolio:Kast.JPG" alt="Image" />
+          <h4 class="project-title">Kastapp.co Recreation</h4>
+          <p class="summary">This is a recreation of the first half of the kastapp.co website. This
+            is a static layout.</p>
+        </div>
+      </a>
+    </div>
+    <!-- Resume Here -->
+    <!-- Footer Here -->
   </div>
+
+
+
+  <!-- </div>
   <div class="row g-2">
     <div class="col-md-3">
     </div>
