--- a/index.html
+++ b/index.html
@@ -305,8 +305,18 @@
         </div>
       </a>
     </div>
-    <!-- Resume Here -->
-    <!-- Footer Here -->
+  </div>
+
+  <!-- Image Divider with Resume -->
+  <div class="card bg-dark text-white">
+    <img src="../PortfolioProject/assets/FINALTransparentBackgroundDivider.png" class="card-img" alt="...">
+    <div class="card-img-overlay">
+      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.
+        This content is a little bit longer.</p>
+    </div>
+  </div>
+  <!-- Resume Here -->
+  <!-- Footer Here -->
   </div>
 
 
