--- a/index.html
+++ b/index.html
@@ -245,84 +245,135 @@
 
   <hr />
   <!-- PORTFOLIO: -->
-  <div class="container">
-    <h1 class="portfolio">Portfolio</h1>
-    <div class="row1 g-2">
-      <a href="https://courtneydowns.github.io/kastapp/" target="_blank">
-        <div class="item col-sm-4" style="background: #c5247e;">
-          <img class=" transition img-responsive">
-          <img src="./assets/img:portfolio:Kast.JPG" alt="Image" />
-          <h4 class="project-title">Kastapp.co Recreation</h4>
-          <p class="summary">This is a recreation of the first half of the kastapp.co website. This
-            is a static layout.</p>
-        </div>
-      </a>
-      <a href="https://courtneydowns.github.io/kastapp/" target="_blank">
-        <div class="item col-sm-4" style="background: #c5247e;">
-          <img class=" transition img-responsive">
-          <img src="./assets/img:portfolio:Kast.JPG" alt="Image" />
-          <h4 class="project-title">Kastapp.co Recreation</h4>
-          <p class="summary">This is a recreation of the first half of the kastapp.co website. This
-            is a static layout.</p>
-        </div>
-      </a>
-      <a href="https://courtneydowns.github.io/kastapp/" target="_blank">
-        <div class="item col-sm-4" style="background: #c5247e;">
-          <img class=" transition img-responsive">
-          <img src="./assets/img:portfolio:Kast.JPG" alt="Image" />
-          <h4 class="project-title">Kastapp.co Recreation</h4>
-          <p class="summary">This is a recreation of the first half of the kastapp.co website. This
-            is a static layout.</p>
-        </div>
-      </a>
+  <section>
+    <div class="container">
+      <h1 class="portfolio">Portfolio</h1>
+      <div class="row1 g-2">
+        <a href="https://courtneydowns.github.io/kastapp/" target="_blank">
+          <div class="item col-sm-4" style="background: #c5247e;">
+            <img class=" transition img-responsive">
+            <img src="./assets/img:portfolio:Kast.JPG" alt="Image" />
+            <h4 class="project-title">Kastapp.co Recreation</h4>
+            <p class="summary">This is a recreation of the first half of the kastapp.co website. This
+              is a static layout.</p>
+          </div>
+        </a>
+        <a href="https://courtneydowns.github.io/kastapp/" target="_blank">
+          <div class="item col-sm-4" style="background: #c5247e;">
+            <img class=" transition img-responsive">
+            <img src="./assets/img:portfolio:Kast.JPG" alt="Image" />
+            <h4 class="project-title">Kastapp.co Recreation</h4>
+            <p class="summary">This is a recreation of the first half of the kastapp.co website. This
+              is a static layout.</p>
+          </div>
+        </a>
+        <a href="https://courtneydowns.github.io/kastapp/" target="_blank">
+          <div class="item col-sm-4" style="background: #c5247e;">
+            <img class=" transition img-responsive">
+            <img src="./assets/img:portfolio:Kast.JPG" alt="Image" />
+            <h4 class="project-title">Kastapp.co Recreation</h4>
+            <p class="summary">This is a recreation of the first half of the kastapp.co website. This
+              is a static layout.</p>
+          </div>
+        </a>
+      </div>
+      <div class="row2 g-2">
+        <a href="https://courtneydowns.github.io/kastapp/" target="_blank">
+          <div class="item col-sm-4" style="background: #c5247e;">
+            <img class=" transition img-responsive">
+            <img src="./assets/img:portfolio:Kast.JPG" alt="Image" />
+            <h4 class="project-title">Kastapp.co Recreation</h4>
+            <p class="summary">This is a recreation of the first half of the kastapp.co website. This
+              is a static layout.</p>
+          </div>
+        </a>
+        <a href="https://courtneydowns.github.io/kastapp/" target="_blank">
+          <div class="item col-sm-4" style="background: #c5247e;">
+            <img class=" transition img-responsive">
+            <img src="./assets/img:portfolio:Kast.JPG" alt="Image" />
+            <h4 class="project-title">Kastapp.co Recreation</h4>
+            <p class="summary">This is a recreation of the first half of the kastapp.co website. This
+              is a static layout.</p>
+          </div>
+        </a>
+        <a href="https://courtneydowns.github.io/kastapp/" target="_blank">
+          <div class="item col-sm-4" style="background: #c5247e;">
+            <img class=" transition img-responsive">
+            <img src="./assets/img:portfolio:Kast.JPG" alt="Image" />
+            <h4 class="project-title">Kastapp.co Recreation</h4>
+            <p class="summary">This is a recreation of the first half of the kastapp.co website. This
+              is a static layout.</p>
+          </div>
+        </a>
+      </div>
     </div>
-    <div class="row2 g-2">
-      <a href="https://courtneydowns.github.io/kastapp/" target="_blank">
-        <div class="item col-sm-4" style="background: #c5247e;">
-          <img class=" transition img-responsive">
-          <img src="./assets/img:portfolio:Kast.JPG" alt="Image" />
-          <h4 class="project-title">Kastapp.co Recreation</h4>
-          <p class="summary">This is a recreation of the first half of the kastapp.co website. This
-            is a static layout.</p>
-        </div>
-      </a>
-      <a href="https://courtneydowns.github.io/kastapp/" target="_blank">
-        <div class="item col-sm-4" style="background: #c5247e;">
-          <img class=" transition img-responsive">
-          <img src="./assets/img:portfolio:Kast.JPG" alt="Image" />
-          <h4 class="project-title">Kastapp.co Recreation</h4>
-          <p class="summary">This is a recreation of the first half of the kastapp.co website. This
-            is a static layout.</p>
-        </div>
-      </a>
-      <a href="https://courtneydowns.github.io/kastapp/" target="_blank">
-        <div class="item col-sm-4" style="background: #c5247e;">
-          <img class=" transition img-responsive">
-          <img src="./assets/img:portfolio:Kast.JPG" alt="Image" />
-          <h4 class="project-title">Kastapp.co Recreation</h4>
-          <p class="summary">This is a recreation of the first half of the kastapp.co website. This
-            is a static layout.</p>
-        </div>
-      </a>
-    </div>
-  </div>
+  </section>
 
   <!-- Image Divider with Resume -->
+  <!-- <section>
+    <div class="card bg-dark text-white">
+      <img src="" class="card-img" alt="...">
+      <div class="card-img-overlay">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.
+          This content is a little bit longer.</p>
+        <p class="card-text">Last updated 3 mins ago</p>
+      </div>
+    </div>
+  </section> -->
 
-  <!-- Resume Here -->
+  <!-- <div id="divider-image">
+    <img src="./assets/Vers3TransparentImageDivider.png" alt="Image" />
+    </dov> -->
+
+  <!-- Contact Me -->
+
+  <!-- <form id="fs-frm" name="simple-contact-form" accept-charset="utf-8" action="https://formspree.io/f/mwkaqrol"
+      method="post">
+      <fieldset id="fs-frm-inputs">
+        <label for="full-name">Full Name</label>
+        <input type="text" name="name" id="full-name" placeholder="First and Last" required="">
+        <label for="email-address">Email Address</label>
+        <input type="email" name="_replyto" id="email-address" placeholder="email@domain.tld" required="">
+        <label for="message">Message</label>
+        <textarea rows="5" name="message" id="message"
+          placeholder="Aenean lacinia bibendum nulla sed consectetur. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Donec ullamcorper nulla non metus auctor fringilla nullam quis risus."
+          required=""></textarea>
+        <input type="hidden" name="_subject" id="email-subject" value="Contact Form Submission">
+      </fieldset>
+      <input type="submit" value="Submit">
+    </form>
+
+    <hr /> -->
+
   <!-- Footer Here -->
-
-
-
-
-  <!-- </div>
-  <div class="row g-2">
-    <div class="col-md-3">
-    </div>
-    <div class="col-md-3">
-    </div>
-    <div class="col-md-3">
-    </div>
+  <!-- <footer id="footer" class="footer-light">
+      <ul class="list-group list-group-horizontal">
+        <li>
+          <a target="_blank" href="https://www.linkedin.com/in/courtney-downs/">
+            <i class="fab fa-linkedin">
+            </i>
+          </a>
+        </li>
+        <li>
+          <a target="_blank" href="https://www.github.com/courtneydowns/">
+            <i class="fab fa-github">
+            </i>
+          </a>
+        </li>
+      </ul>
+      <p class="copyright">
+        <a class="copyright-info" href>© Courtney Downs 2021</a>
+        <br>
+      </p>
+    </footer> -->
+  <!-- </div> <div class=" row g-2">
+          <div class="col-md-3">
+          </div>
+          <div class="col-md-3">
+          </div>
+          <div class="col-md-3">
+          </div>
   </div>
   </div>
   </section> -->
