--- a/index.html
+++ b/index.html
@@ -36,16 +36,16 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">ABOUT</a>
+            <a class="nav-link" href="#about-section">ABOUT</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">CREDO</a>
+            <a class="nav-link" href="#credo-section">CREDO</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">SKILLS</a>
+            <a class="nav-link" href="#section-skills">SKILLS</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">PORTFOLIO</a>
+            <a class="nav-link" href="#portfolio-skills">PORTFOLIO</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">RESUME</a>
@@ -58,10 +58,6 @@
     </div>
   </div>
 
-  <!-- <div id="stars">0</div>
-  <div id="stars2"></div>
-  <div id="stars3"></div> -->
-
   <!-- HERO LANDING PAGE -->
   <div id="container">
     <img id="background-image" src="./assets/FinalBackgroundImageLarge.jpeg" class='img-fluid'>
@@ -70,6 +66,7 @@
 
   <!-- <div class="container"> -->
   <!-- ABOUT ME -->
+  <div id="about-section"></div>
   <section id="about-me">
     <div class="container">
       <h1 class="about-me-title">About Me</h1>
@@ -111,6 +108,7 @@
   <hr />
 
   <!-- MY CREDO -->
+  <div id="credo-section"></div>
   <div class="container">
     <h1 class="my-credo-title">Credo</h1>
     <div class="row g-2">
@@ -186,6 +184,7 @@
   <hr />
 
   <!-- SKILLS -->
+  <div id="skills-section"></div>
   <section class="container">
     <h1 class="h1-my-skillset">Skills</h1>
     <div class="row g-2">
@@ -245,7 +244,7 @@
 
   <hr />
   <!-- PORTFOLIO: -->
-  <section>
+  <!-- <section id="portfolio-section">
     <div class="container">
       <h1 class="portfolio">Portfolio</h1>
       <div class="row1 g-2">
@@ -307,66 +306,164 @@
         </a>
       </div>
     </div>
+  </section> -->
+
+  <!-- PORTFOLIO -->
+
+  <section id="portfolio-container">
+    <div class="container">
+      <h1 class="portfolio">Portfolio</h1>
+
+      <div class="row-1">
+
+        <a href="#">
+          <div class="item col4">
+            <img class="transition img-responsive" src="./assets/img:portfolio:Kast.JPG">
+            <h4>kast.app</h4>
+            <p>Description</p>
+          </div>
+        </a>
+        <a href="#">
+          <div class="item col4">
+            <img class="transition img-responsive" src="./assets/img:portfolio:Kast.JPG">
+            <h4>title image</h4>
+            <p>Description</p>
+          </div>
+        </a>
+        <a href="#">
+          <div class="item col4">
+            <img class="transition img-responsive" src="./assets/img:portfolio:Kast.JPG">
+            <h4>title image</h4>
+            <p>Description</p>
+          </div>
+        </a>
+
+      </div>
+
+      <div class="row-2">
+
+        <a href="#">
+          <div class="item col4">
+            <img class="transition img-responsive" src="./assets/img:portfolio:Kast.JPG">
+            <h4>title image</h4>
+            <p>Description</p>
+          </div>
+        </a>
+        <a href="#">
+          <div class="item col4">
+            <img class="transition img-responsive" src="./assets/img:portfolio:Kast.JPG">
+            <h4>title image</h4>
+            <p>Description</p>
+          </div>
+        </a>
+        <a href="#">
+          <div class="item col4">
+            <img class="transition img-responsive" src="./assets/img:portfolio:Kast.JPG">
+            <h4>title image</h4>
+            <p>Description</p>
+          </div>
+        </a>
+
+      </div>
+
+
+    </div>
   </section>
 
   <!-- Image Divider with Resume -->
   <!-- <section>
-    <div class="card bg-dark text-white">
-      <img src="" class="card-img" alt="...">
+    <div id="image-divider">
+      <img src="./assets/ImageDividerFinalBackgroundImageLarge.png" />
+    </div>
+  </section> -->
+
+  <!-- IMAGE DIVIDER WITH RESUME -->
+
+  <section id="overlay-offset">
+    <div class="card bg-dark text-white img-fluid">
+      <img src="./assets/Vers3TransparentImageDivider.png" class="card-img" alt="...">
       <div class="card-img-overlay">
         <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.
+        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+          content.
           This content is a little bit longer.</p>
         <p class="card-text">Last updated 3 mins ago</p>
       </div>
     </div>
+  </section>
+
+
+  <!-- <section id="image-div">
+    <div id="divider-image">
+      <img src="./assets/FINALBackgroundImageDivider.jpeg" alt="Image" id="bigger-image" /> -->
+  <!-- </div>
   </section> -->
 
-  <!-- <div id="divider-image">
-    <img src="./assets/Vers3TransparentImageDivider.png" alt="Image" />
-    </dov> -->
-
   <!-- Contact Me -->
+  <section id="contact-offset">
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <form action="https://formspree.io/f/mwkaqrol" method="POST">
+            <div class="control-group">
+              <div class="form-group">
+                <input type="text" class="form-control" placeholder="Your Name" id="name" required
+                  data-validation-required-message="Please enter your name" name="name" />
+                <p class="help-block text-danger"></p>
+              </div>
+            </div>
+            <div class="forms">
+              <div class="form-group">
+                <input type="email" class="form-control" placeholder="Your Email" id="email" required
+                  data-validation-required-message="Please enter your email" name="_replyto" />
+                <p class="help-block text-danger"></p>
+              </div>
+            </div>
+            <div class="control-group">
+              <div class="form-group">
+                <textarea class="form-control" rows="7" placeholder="Your Message" id="message" required
+                  data-validation-required-message="Please leave a message" name="message"></textarea>
+                <p class="help-block text-danger"></p>
+              </div>
+            </div>
+            <div class="text-center">
+              <div id="success"></div>
+              <button type="submit" class="btn btn-lg btn-black">
+                <i class="fa fa-paper-plane-o" aria-hidden="true"></i>
+                Send Message
+              </button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </section>
 
-  <!-- <form id="fs-frm" name="simple-contact-form" accept-charset="utf-8" action="https://formspree.io/f/mwkaqrol"
-      method="post">
-      <fieldset id="fs-frm-inputs">
-        <label for="full-name">Full Name</label>
-        <input type="text" name="name" id="full-name" placeholder="First and Last" required="">
-        <label for="email-address">Email Address</label>
-        <input type="email" name="_replyto" id="email-address" placeholder="email@domain.tld" required="">
-        <label for="message">Message</label>
-        <textarea rows="5" name="message" id="message"
-          placeholder="Aenean lacinia bibendum nulla sed consectetur. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Donec ullamcorper nulla non metus auctor fringilla nullam quis risus."
-          required=""></textarea>
-        <input type="hidden" name="_subject" id="email-subject" value="Contact Form Submission">
-      </fieldset>
-      <input type="submit" value="Submit">
-    </form>
+  <!-- https://formspree.io/f/mwkaqrol -->
 
-    <hr /> -->
+  <hr />
 
   <!-- Footer Here -->
-  <!-- <footer id="footer" class="footer-light">
-      <ul class="list-group list-group-horizontal">
-        <li>
-          <a target="_blank" href="https://www.linkedin.com/in/courtney-downs/">
-            <i class="fab fa-linkedin">
-            </i>
-          </a>
-        </li>
-        <li>
-          <a target="_blank" href="https://www.github.com/courtneydowns/">
-            <i class="fab fa-github">
-            </i>
-          </a>
-        </li>
-      </ul>
-      <p class="copyright">
-        <a class="copyright-info" href>© Courtney Downs 2021</a>
-        <br>
-      </p>
-    </footer> -->
+  <footer id="footer" class="footer-light">
+    <ul class="list-group list-group-horizontal">
+      <li>
+        <a target="_blank" href="https://www.linkedin.com/in/courtney-downs/">
+          <i class="fab fa-linkedin">
+          </i>
+        </a>
+      </li>
+      <li>
+        <a target="_blank" href="https://www.github.com/courtneydowns/">
+          <i class="fab fa-github">
+          </i>
+        </a>
+      </li>
+    </ul>
+    <p class="copyright">
+      <a class="copyright-info" href>© Courtney Downs 2021</a>
+      <br>
+    </p>
+  </footer>
   <!-- </div> <div class=" row g-2">
           <div class="col-md-3">
           </div>
