updating jpeg and css

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
 <body>
   <!-- Nav Bar -->
+  <!-- <main> -->
   <div class="navbar navbar-expand-lg navbar-dark bg-light">
     <div class="container-fluid">
       <div>
@@ -244,73 +245,78 @@
 
   <hr />
   <!-- PORTFOLIO: -->
-  <!-- <section id="portfolio-section">
-    <div class="container">
-      <h1 class="portfolio">Portfolio</h1>
-      <div class="row1 g-2">
-        <a href="https://courtneydowns.github.io/kastapp/" target="_blank">
-          <div class="item col-sm-4" style="background: #c5247e;">
-            <img class=" transition img-responsive">
-            <img src="./assets/img:portfolio:Kast.JPG" alt="Image" />
-            <h4 class="project-title">Kastapp.co Recreation</h4>
-            <p class="summary">This is a recreation of the first half of the kastapp.co website. This
-              is a static layout.</p>
+  <div class="container-fluid">
+    <div class="row">
+
+      <section id="portfolio-container">
+        <div class="container">
+          <h1 class="portfolio">Portfolio</h1>
+          <div class="row1 g-2">
+            <a href="https://courtneydowns.github.io/kastapp/" target="_blank">
+              <div class="item col-sm-4" style="background: #c5247e;">
+                <img class=" transition img-responsive">
+                <img src="./assets/img:portfolio:Kast.JPG" alt="Image" />
+                <h4 class="project-title">Kastapp.co Recreation</h4>
+                <p class="summary">This is a recreation of the first half of the kastapp.co website. This
+                  is a static layout.</p>
+              </div>
+            </a>
+            <a href="https://courtneydowns.github.io/kastapp/" target="_blank">
+              <div class="item col-sm-4" style="background: #c5247e;">
+                <img class=" transition img-responsive">
+                <img src="./assets/img:portfolio:Kast.JPG" alt="Image" />
+                <h4 class="project-title">Kastapp.co Recreation</h4>
+                <p class="summary">This is a recreation of the first half of the kastapp.co website. This
+                  is a static layout.</p>
+              </div>
+            </a>
+            <a href="https://courtneydowns.github.io/kastapp/" target="_blank">
+              <div class="item col-sm-4" style="background: #c5247e;">
+                <img class=" transition img-responsive">
+                <img src="./assets/img:portfolio:Kast.JPG" alt="Image" />
+                <h4 class="project-title">Kastapp.co Recreation</h4>
+                <p class="summary">This is a recreation of the first half of the kastapp.co website. This
+                  is a static layout.</p>
+              </div>
+            </a>
           </div>
-        </a>
-        <a href="https://courtneydowns.github.io/kastapp/" target="_blank">
-          <div class="item col-sm-4" style="background: #c5247e;">
-            <img class=" transition img-responsive">
-            <img src="./assets/img:portfolio:Kast.JPG" alt="Image" />
-            <h4 class="project-title">Kastapp.co Recreation</h4>
-            <p class="summary">This is a recreation of the first half of the kastapp.co website. This
-              is a static layout.</p>
+          <div class="row2 g-2">
+            <a href="https://courtneydowns.github.io/kastapp/" target="_blank">
+              <div class="item col-sm-4" style="background: #c5247e;">
+                <img class=" transition img-responsive">
+                <img src="./assets/img:portfolio:Kast.JPG" alt="Image" />
+                <h4 class="project-title">Kastapp.co Recreation</h4>
+                <p class="summary">This is a recreation of the first half of the kastapp.co website. This
+                  is a static layout.</p>
+              </div>
+            </a>
+            <a href="https://courtneydowns.github.io/kastapp/" target="_blank">
+              <div class="item col-sm-4" style="background: #c5247e;">
+                <img class=" transition img-responsive">
+                <img src="./assets/img:portfolio:Kast.JPG" alt="Image" />
+                <h4 class="project-title">Kastapp.co Recreation</h4>
+                <p class="summary">This is a recreation of the first half of the kastapp.co website. This
+                  is a static layout.</p>
+              </div>
+            </a>
+            <a href="https://courtneydowns.github.io/kastapp/" target="_blank">
+              <div class="item col-sm-4" style="background: #c5247e;">
+                <img class=" transition img-responsive">
+                <img src="./assets/img:portfolio:Kast.JPG" alt="Image" />
+                <h4 class="project-title">Kastapp.co Recreation</h4>
+                <p class="summary">This is a recreation of the first half of the kastapp.co website. This
+                  is a static layout.</p>
+              </div>
+            </a>
           </div>
-        </a>
-        <a href="https://courtneydowns.github.io/kastapp/" target="_blank">
-          <div class="item col-sm-4" style="background: #c5247e;">
-            <img class=" transition img-responsive">
-            <img src="./assets/img:portfolio:Kast.JPG" alt="Image" />
-            <h4 class="project-title">Kastapp.co Recreation</h4>
-            <p class="summary">This is a recreation of the first half of the kastapp.co website. This
-              is a static layout.</p>
-          </div>
-        </a>
-      </div>
-      <div class="row2 g-2">
-        <a href="https://courtneydowns.github.io/kastapp/" target="_blank">
-          <div class="item col-sm-4" style="background: #c5247e;">
-            <img class=" transition img-responsive">
-            <img src="./assets/img:portfolio:Kast.JPG" alt="Image" />
-            <h4 class="project-title">Kastapp.co Recreation</h4>
-            <p class="summary">This is a recreation of the first half of the kastapp.co website. This
-              is a static layout.</p>
-          </div>
-        </a>
-        <a href="https://courtneydowns.github.io/kastapp/" target="_blank">
-          <div class="item col-sm-4" style="background: #c5247e;">
-            <img class=" transition img-responsive">
-            <img src="./assets/img:portfolio:Kast.JPG" alt="Image" />
-            <h4 class="project-title">Kastapp.co Recreation</h4>
-            <p class="summary">This is a recreation of the first half of the kastapp.co website. This
-              is a static layout.</p>
-          </div>
-        </a>
-        <a href="https://courtneydowns.github.io/kastapp/" target="_blank">
-          <div class="item col-sm-4" style="background: #c5247e;">
-            <img class=" transition img-responsive">
-            <img src="./assets/img:portfolio:Kast.JPG" alt="Image" />
-            <h4 class="project-title">Kastapp.co Recreation</h4>
-            <p class="summary">This is a recreation of the first half of the kastapp.co website. This
-              is a static layout.</p>
-          </div>
-        </a>
-      </div>
+        </div>
+      </section>
     </div>
-  </section> -->
+    <div class="row">
 
-  <!-- PORTFOLIO -->
 
-  <section id="portfolio-container">
+      <!-- PORTFOLIO -->
+      <!-- <section id="portfolio-container">
     <div class="container">
       <h1 class="portfolio">Portfolio</h1>
 
@@ -368,112 +374,98 @@
 
 
     </div>
-  </section>
+  </section> -->
 
-  <!-- Image Divider with Resume -->
-  <!-- <section>
+      <!-- Image Divider with Resume -->
+      <!-- <section id="overlay-offset">
     <div id="image-divider">
-      <img src="./assets/ImageDividerFinalBackgroundImageLarge.png" />
+      <img src="./assets/Vers3TransparentImageDivider.png" />
     </div>
   </section> -->
 
-  <!-- IMAGE DIVIDER WITH RESUME -->
+      <!-- IMAGE DIVIDER WITH RESUME -->
 
-  <section id="overlay-offset">
-    <div class="card bg-dark text-white img-fluid">
-      <img src="./assets/Vers3TransparentImageDivider.png" class="card-img" alt="...">
-      <div class="card-img-overlay">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-          content.
-          This content is a little bit longer.</p>
-        <p class="card-text">Last updated 3 mins ago</p>
-      </div>
+      <section id="overlay-offset">
+        <div class="card bg-dark text-white img-fluid">
+          <img src="./assets/Vers3TransparentImageDivider.png" class="card-img" alt="...">
+          <div class="card-img-overlay">
+            <h5 class="card-title">Interested in getting to know more about me?</h5>
+            <div class="resume-button" style="font-family: 'Open Source Sans', serif; font-size: 20px;">
+              <button type="submit" onclick="window.open ('Courtney-Downs-Web-Development-Resume.doc')">DOWNLOAD
+                RESUME</button>
+            </div>
+            <!-- <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+              content.
+              This content is a little bit longer.</p>
+            <p class="card-text">Last updated 3 mins ago</p> -->
+          </div>
+        </div>
+      </section>
     </div>
-  </section>
 
-
-  <!-- <section id="image-div">
+    <!-- <section id="image-div">
     <div id="divider-image">
       <img src="./assets/FINALBackgroundImageDivider.jpeg" alt="Image" id="bigger-image" /> -->
-  <!-- </div>
+    <!-- </div>
   </section> -->
 
-  <!-- Contact Me -->
-  <section id="contact-offset">
-    <div class="container">
-      <div class="row">
-        <div class="col-12">
-          <form action="https://formspree.io/f/mwkaqrol" method="POST">
-            <div class="control-group">
-              <div class="form-group">
-                <input type="text" class="form-control" placeholder="Your Name" id="name" required
-                  data-validation-required-message="Please enter your name" name="name" />
-                <p class="help-block text-danger"></p>
-              </div>
+    <!-- Contact Me -->
+    <div class="row">
+      <section id="contact-offset">
+        <div class="container">
+          <div class="row">
+            <div class="col-12">
+              <form action="https://formspree.io/f/mwkaqrol" method="POST">
+                <div class="control-group">
+                  <div class="form-group">
+                    <input type="text" class="form-control" placeholder="Your Name" id="name"
+                      style="font-family: 'Source Sans Pro', sans-serif;" required
+                      data-validation-required-message="Please enter your name" name="name" />
+                    <p class="help-block text-danger"></p>
+                  </div>
+                </div>
+                <div class="forms">
+                  <div class="form-group">
+                    <input type="email" class="form-control" placeholder="Your Email" id="email"
+                      style="font-family: 'Source Sans Pro', sans-serif;" required
+                      data-validation-required-message="Please enter your email" name="_replyto" />
+                    <p class="help-block text-danger"></p>
+                  </div>
+                </div>
+                <div class="control-group">
+                  <div class="form-group">
+                    <textarea class="form-control" rows="7" placeholder="Your Message" id="message"
+                      style="font-family: 'Source Sans Pro', sans-serif;" required
+                      data-validation-required-message="Please leave a message" name="message"></textarea>
+                    <p class="help-block text-danger"></p>
+                  </div>
+                </div>
+                <div class="text-center">
+                  <div id="success"></div>
+                  <button type="submit" class="btn btn-lg btn-black">
+                    <i class="fa fa-paper-plane-o" aria-hidden="true"></i>
+                    Send Message
+                  </button>
+                </div>
+              </form>
             </div>
-            <div class="forms">
-              <div class="form-group">
-                <input type="email" class="form-control" placeholder="Your Email" id="email" required
-                  data-validation-required-message="Please enter your email" name="_replyto" />
-                <p class="help-block text-danger"></p>
-              </div>
-            </div>
-            <div class="control-group">
-              <div class="form-group">
-                <textarea class="form-control" rows="7" placeholder="Your Message" id="message" required
-                  data-validation-required-message="Please leave a message" name="message"></textarea>
-                <p class="help-block text-danger"></p>
-              </div>
-            </div>
-            <div class="text-center">
-              <div id="success"></div>
-              <button type="submit" class="btn btn-lg btn-black">
-                <i class="fa fa-paper-plane-o" aria-hidden="true"></i>
-                Send Message
-              </button>
-            </div>
-          </form>
+          </div>
         </div>
-      </div>
+        <footer class="footer">
+          <div class="container text-center" style="font-family: 'Source Sans Pro', sans-serif;">
+            <p>© COURTNEY DOWNS 2021</p>
+          </div>
+        </footer>
+
+      </section>
     </div>
-  </section>
+  </div>
 
   <!-- https://formspree.io/f/mwkaqrol -->
+  <!-- </main> -->
 
-  <hr />
-
-  <!-- Footer Here -->
-  <footer id="footer" class="footer-light">
-    <ul class="list-group list-group-horizontal">
-      <li>
-        <a target="_blank" href="https://www.linkedin.com/in/courtney-downs/">
-          <i class="fab fa-linkedin">
-          </i>
-        </a>
-      </li>
-      <li>
-        <a target="_blank" href="https://www.github.com/courtneydowns/">
-          <i class="fab fa-github">
-          </i>
-        </a>
-      </li>
-    </ul>
-    <p class="copyright">
-      <a class="copyright-info" href>© Courtney Downs 2021</a>
-      <br>
-    </p>
-  </footer>
-  <!-- </div> <div class=" row g-2">
-          <div class="col-md-3">
-          </div>
-          <div class="col-md-3">
-          </div>
-          <div class="col-md-3">
-          </div>
-  </div>
-  </div>
-  </section> -->
+  <!-- <div id="footer" class="footer-copyright text-center py-3">© Courtney Downs 2021
+  </div> -->
 
   <!-- Insert link to project and stylize thumbnail -->
 
