updating html and css

--- a/index.html
+++ b/index.html
@@ -464,8 +464,44 @@
   <!-- https://formspree.io/f/mwkaqrol -->
   <!-- </main> -->
 
-  <!-- <div id="footer" class="footer-copyright text-center py-3">© Courtney Downs 2021
-  </div> -->
+
+
+  <!-- <footer id="footer" class="footer footer-light mt-auto py-3">
+    <ul class="list-group list-group-horizontal">
+      <li>
+        <a target="_blank" href="https://www.linkedin.com/in/courtney-downs/">
+          <i class="fab fa-linkedin">
+          </i>
+        </a>
+      </li>
+      <li>
+        <a target="_blank" href="https://www.github.com/courtneydowns/">
+          <i class="fab fa-github">
+          </i>
+        </a>
+      </li>
+    </ul>
+    <p class="copyright">
+      <a class="copyright-info" href>© Courtney Downs 2021</a>
+      <br>
+    </p>
+  </footer> -->
+
+  <!-- <div id="footer" class="footer-copyright text-center py-3">© Courtney Downs 2021:
+    <a href="https://mdbootstrap.com/education/bootstrap/"> MDBootstrap.com</a>
+  </div>
+
+
+    <!-- </div> <div class=" row g-2">
+          <div class="col-md-3">
+          </div>
+          <div class="col-md-3">
+          </div>
+          <div class="col-md-3">
+          </div>
+  </div>
+  </div>
+  </section> -->
 
   <!-- Insert link to project and stylize thumbnail -->
 
