--- a/index.html
+++ b/index.html
@@ -389,10 +389,12 @@
         <div class="card bg-dark text-white img-fluid">
           <img src="./assets/Vers3TransparentImageDivider.png" class="card-img" alt="...">
           <div class="card-img-overlay">
-            <h5 class="card-title">Interested in getting to know more about me?</h5>
-            <div class="resume-button" style="font-family: 'Open Source Sans', serif; font-size: 20px;">
-              <button type="submit" onclick="window.open ('Courtney-Downs-Web-Development-Resume.doc')">DOWNLOAD
-                RESUME</button>
+            <h5 class="card-title" style="font-size: 38px;">Interested in getting to know more about me?</h5>
+            <div class="form">
+              <div class="resume-icon-button">
+                <p"><img onclick="download();" style="cursor: pointer;" src="./assets/4resumeicon.svg" alt=""
+                    class="image"></p>
+              </div>
             </div>
             <!-- <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
               content.
