updating html and css

--- a/index.html
+++ b/index.html
@@ -43,16 +43,16 @@
             <a class="nav-link" href="#credo-section">CREDO</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#section-skills">SKILLS</a>
+            <a class="nav-link" href="#skills-section">SKILLS</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#portfolio-skills">PORTFOLIO</a>
+            <a class="nav-link" href="#projects-section">PORTFOLIO</a>
           </li>
           <!-- <li class="nav-item">
             <a class="nav-link" href="#">RESUME</a>
           </li> -->
           <li class="nav-item">
-            <a class="nav-link" href="#">CONTACT</a>
+            <a class="nav-link" href="#contact-section">CONTACT</a>
           </li>
         </ul>
       </div>
@@ -100,10 +100,10 @@
         </div>
         <div class="col-md-4 final-para">
           <p>
-            See my creations' code on
+            Go see my code
             <br>
             <i class="fab fa-github" id="fa-github"></i></p>
-          <p>Check out my experience on
+          <p>Check out my experience
             <br>
             <i class="fab fa-linkedin" id="fa-linkedin"></i></p>
           <p>Download my resume
@@ -196,7 +196,7 @@
   <hr />
 
   <!-- SKILLS -->
-  <div id="section-skills"></div>
+  <div id="skills-section"></div>
   <section class="container">
     <h1 class="h1-my-skillset">Skills</h1>
     <div class="row g-2">
@@ -256,7 +256,7 @@
 
   <hr />
   <!-- PORTFOLIO: -->
-  <div id="portfolio-skills"></div>
+  <div id="projects-section"></div>
   <div id="portfolio-container"></div>
   <div class="container-fluid">
     <div class="row">
@@ -422,7 +422,7 @@
   </section> -->
 
       <!-- Contact Me -->
-
+      <div id="contact-section"></div>
       <div class="row">
         <section id="contact-offset">
           <div class="container">
