--- a/index.html
+++ b/index.html
@@ -274,19 +274,19 @@
                   is a static layout.</p>
               </div>
             </a>
-            <a href="https://courtneydowns.github.io/kastapp/" target="_blank">
+            <a href="https://courtneydowns.github.io/Rick-and-Morty-API/" target="_blank">
               <div class="item col-sm-4" style="background: #c5247e;">
                 <img class=" transition img-responsive">
-                <img src="./assets/img:portfolio:Kast.JPG" alt="Image" />
+                <img src="./assets/RickandMortyThumbnail.png" alt="Image" />
                 <h4 class="project-title">Kastapp.co Recreation</h4>
                 <p class="summary">This is a recreation of the first half of the kastapp.co website. This
                   is a static layout.</p>
               </div>
             </a>
-            <a href="https://courtneydowns.github.io/kastapp/" target="_blank">
+            <a href="https://github.com/courtneydowns/CAT-API" target="_blank">
               <div class="item col-sm-4" style="background: #c5247e;">
                 <img class=" transition img-responsive">
-                <img src="./assets/img:portfolio:Kast.JPG" alt="Image" />
+                <img src="./assets/CatThumbnail.png" alt="Image" />
                 <h4 class="project-title">Kastapp.co Recreation</h4>
                 <p class="summary">This is a recreation of the first half of the kastapp.co website. This
                   is a static layout.</p>
